--- a/peco.config
+++ b/peco.config
@@ -1,70 +1,57 @@
 
 # http://www.pupha.net/archives/2267/
-# function peco-select-history() {
-  # local cmd=`history -500 | tail -r | peco | cut -d ' ' -f 1`
-  # if [ "${cmd}" != "" ]; then
-    # r ${cmd}
-    # return 0;
-  # fi
-  # return -1;
-# }
-# zle -N peco-select-history
-# alias phist='peco-select-history'
-# # bindkey '^r' peco-select-history
+function peco-select-history
+  set -lx cmd `history -500 | tail -r | peco | cut -d ' ' -f 1`
+  if [ "$cmd" != "" ]
+    # r $cmd
+echo $cmd
+    return 0;
+  end
+  return -1;
+end
+alias phist='peco-select-history'
 
-# function p(){
-  # $@ | peco | pbcopy
-# }
+# http://nishikawasasaki.hatenablog.com/entry/2013/10/29/221908
+# peco を使って cd 履歴の中からディレクトリを選択
+# 過去の訪問回数が多いほど選択候補の上に来る
+function peco_cd_history
+  sort $CD_HISTORY_FILE | uniq -c | sort -r | sed -e 's/^[ ]*[0-9]*[ ]*//' | peco | read -l pecoCDhistory
+  if [ $pecoCDhistory ]
+    # commandline 'cd '
+    # commandline -i $pecoCDhistory
+    echo 'cd' $pecoCDhistory
+    cd $pecoCDhistory
+    echo $pecoCDhistory
+    commandline -f repaint
+  else
+    commandline ''
+  end
+end
+alias pcd=peco_cd_history
 
+# https://github.com/oh-my-fish/plugin-peco/blob/master/functions/peco_kill.fish
+function peco_kill
+  ps ax -o pid,time,command | peco --query "$LBUFFER" | awk '{print $1}' | xargs kill
+end
+alias pkill=peco_kill
 
-# alias -g P='| peco'
-# alias -g Px='| peco | xargs '
+# https://github.com/oh-my-fish/plugin-peco/blob/master/functions/peco_select_history.fish
+function peco_select_history
+  if test (count $argv) = 0
+    set peco_flags --layout=bottom-up
+  else
+    set peco_flags --layout=bottom-up --query "$argv"
+  end
 
-# # http://stillpedant.hatenablog.com/entry/percol-cd-history
-# typeset -U chpwd_functions
-# CD_HISTORY_FILE=${HOME}/.cd_history_file # cd 履歴の記録先ファイル
-# function chpwd_record_history() {
-  # echo $PWD >> ${CD_HISTORY_FILE}
-# }
-# chpwd_functions=($chpwd_functions chpwd_record_history)
+  history|peco $peco_flags|read foo
 
-  # # pecoを使って cd 履歴の中からディレクトリを選択
-  # # 過去の訪問回数が多いほど選択候補の上に来る
-# function peco_get_destination_from_history() {
-  # sort ${CD_HISTORY_FILE} | uniq -c | sort -r | \
-  # sed -e 's/^[ ]*[0-9]*[ ]*//' | \
-  # sed -e s"/^${HOME//\//\\/}/~/" | \
-  # peco | xargs echo
-# }
-
-# # peco を使って cd 履歴の中からディレクトリを選択し cd するウィジェット
-# function peco_cd_history() {
-  # local destination=$(peco_get_destination_from_history)
-  # if [ "${destination}" != "" ]; then
-    # echo "${destination}"
-    # cd ${destination/#\~/${HOME}}
-    # zle -N reset-prompt
-    # return 0;
-# fi
-  # return -1;
-# }
-# zle -N peco_cd_history
-# alias pcd='peco_cd_history'
-# alias j='pcd'
-
-# # peco を使って cd 履歴の中からディレクトリを選択し，現在のカーソル位置に挿入するウィジェット
-# function peco_insert_history() {
-# local destination=$(peco_get_destination_from_history)
-# if [ $? -eq 0 ]; then
-  # local new_left="${LBUFFER} ${destination} "
-  # BUFFER=${new_left}${RBUFFER}
-  # CURSOR=${#new_left}
-# fi
-# zle -N reset-prompt
-# }
-# zle -N peco_insert_history
-# alias pins='peco_insert_history'
-# }}}
+  if [ $foo ]
+    commandline $foo
+  else
+    commandline ''
+  end
+end
+alias phist=peco_select_history
 
 alias pgco='br_fmt | xargs git checkout'
 alias pgcob='pgco -b'
@@ -90,43 +77,33 @@ alias pless='pfind | xargs less'
 # http://qiita.com/itkrt2y/items/0671d1f48e66f21241e2
 # alias pghq='cd $(ghq root)/$(ghq list | peco)'
 
-# function pcat(){
-  # cat -n $@ | peco
-# }
-
 # # Gitのブランチをpecoで扱えるように整形
 function br_fmt
   git branch -a | peco | xargs echo | sed -e 's/\*//' | sed -e 's/remotes\/origin\///'
 end
 
-# peco git checkout directory
-# function pgcod(){
- # local temp=`br_fmt | xargs echo`
- # gco "${temp}" "$@"
-# }
+function br_fmt_remote
+  br_fmt | xargs echo | awk '{printf("%s%s\n", "remotes/origin/", $0)}'
+end
 
-# function br_fmt_remote(){
-  # br_fmt | xargs echo | awk '{printf("%s%s\n", "remotes/origin/", $0)}'
-# }
-
-# function pgmg-remote(){
-  # br_fmt_remote | xargs git merge
-# }
-# function pgmgs-remote(){
-  # br_fmt_remote | xargs git merge --squash
-# }
-# function pgl-remote(){
-  # br_fmt_remote | xargs git log
-# }
-# function pglp-remote(){
-  # br_fmt_remote | xargs git log -p
-# }
-# function pglst-remote(){
-  # br_fmt_remote | xargs git log --stat
-# }
-# function pgd-remote(){
-  # br_fmt_remote | xargs git diff
-# }
-# function pgdn-remote(){
-  # br_fmt_remote | xargs git diff --name-status
-# }
+function pgmg-remote
+  br_fmt_remote | xargs git merge
+end
+function pgmgs-remote
+  br_fmt_remote | xargs git merge --squash
+end
+function pgl-remote
+  br_fmt_remote | xargs git log
+end
+function pglp-remote
+  br_fmt_remote | xargs git log -p
+end
+function pglst-remote
+  br_fmt_remote | xargs git log --stat
+end
+function pgd-remote
+  br_fmt_remote | xargs git diff
+end
+function pgdn-remote
+  br_fmt_remote | xargs git diff --name-status
+end
