--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -9431,7 +9431,7 @@
 	<key>NSWindow Frame SUUpdateAlert</key>
 	<string>1610 232 620 392 1280 -224 1280 1001 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>14 50 610 727 0 0 1280 777 </string>
+	<string>26 50 610 727 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>79 64 625 714 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
@@ -9450,65 +9450,65 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.20784313976764679</real>
+				<real>0.30980392156862746</real>
 				<key>Green Component</key>
-				<real>0.20784313976764679</real>
+				<real>0.13725490196078433</real>
 				<key>Red Component</key>
-				<real>0.20784313976764679</real>
+				<real>0.14509803921568626</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.32156863808631897</real>
+				<real>0.31372550129890442</real>
 				<key>Green Component</key>
-				<real>0.32156863808631897</real>
+				<real>0.31372550129890442</real>
 				<key>Red Component</key>
-				<real>0.82352942228317261</real>
+				<real>0.43921568989753723</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.45882353186607361</real>
+				<real>0.54117649793624878</real>
 				<key>Green Component</key>
-				<real>0.87843137979507446</real>
+				<real>0.70588237047195435</real>
 				<key>Red Component</key>
-				<real>0.7607843279838562</real>
+				<real>0.37647059559822083</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.54509806632995605</real>
+				<real>0.68627452850341797</real>
 				<key>Green Component</key>
-				<real>0.89411765336990356</real>
+				<real>0.87450981140136719</real>
 				<key>Red Component</key>
-				<real>0.88235294818878174</real>
+				<real>0.94117647409439087</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.85098040103912354</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.71764707565307617</real>
+				<real>0.33333333333333331</real>
 				<key>Red Component</key>
-				<real>0.54117649793624878</real>
+				<real>0.33333333333333331</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.9686274528503418</real>
+				<real>0.82745099067687988</real>
 				<key>Green Component</key>
-				<real>0.70980393886566162</real>
+				<real>0.57647061347961426</real>
 				<key>Red Component</key>
-				<real>0.93725490570068359</real>
+				<real>0.92549020051956177</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.89019608497619629</real>
 				<key>Green Component</key>
-				<real>0.95686274766921997</real>
+				<real>0.87843137979507446</real>
 				<key>Red Component</key>
-				<real>0.86274510622024536</real>
+				<real>0.57647061347961426</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
@@ -9522,74 +9522,74 @@
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3803921639919281</real>
+				<real>0.54117649793624878</real>
 				<key>Green Component</key>
-				<real>0.7607843279838562</real>
+				<real>0.70588237047195435</real>
 				<key>Red Component</key>
-				<real>0.64705884456634521</real>
+				<real>0.37647059559822083</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.42745098471641541</real>
+				<real>0.56078433990478516</real>
 				<key>Green Component</key>
-				<real>0.7764706015586853</real>
+				<real>0.68627452850341797</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.87450981140136719</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.73333334922790527</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.60000002384185791</real>
+				<real>0.33333333333333331</real>
 				<key>Red Component</key>
-				<real>0.42352941632270813</real>
+				<real>0.33333333333333331</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.85098040103912354</real>
+				<real>0.76470589637756348</real>
 				<key>Green Component</key>
-				<real>0.59215688705444336</real>
+				<real>0.54901963472366333</real>
 				<key>Red Component</key>
-				<real>0.81960785388946533</real>
+				<real>0.94117647409439087</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.82745099067687988</real>
 				<key>Green Component</key>
-				<real>0.83921569585800171</real>
+				<real>0.81568628549575806</real>
 				<key>Red Component</key>
-				<real>0.7450980544090271</real>
+				<real>0.54901963472366333</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.92549020051956177</real>
+				<real>0.50196081399917603</real>
 				<key>Green Component</key>
-				<real>0.93333333730697632</real>
+				<real>0.56470590829849243</real>
 				<key>Red Component</key>
-				<real>0.93333333730697632</real>
+				<real>0.43921568989753723</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.32549020648002625</real>
+				<real>0.50196081399917603</real>
 				<key>Green Component</key>
-				<real>0.32549020648002625</real>
+				<real>0.56470590829849243</real>
 				<key>Red Component</key>
-				<real>0.32549020648002625</real>
+				<real>0.43921568989753723</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.047058824449777603</real>
+				<real>0.63921570777893066</real>
 				<key>Green Component</key>
-				<real>0.047058824449777603</real>
+				<real>0.63921570777893066</real>
 				<key>Red Component</key>
-				<real>0.94117647409439087</real>
+				<real>0.86274510622024536</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9598,16 +9598,29 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.19607843458652496</real>
+				<real>0.30919251824817445</real>
 				<key>Green Component</key>
-				<real>0.19607843458652496</real>
+				<real>0.13737454379562045</real>
 				<key>Red Component</key>
-				<real>0.19607843458652496</real>
+				<real>0.14612796532846714</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
 			<key>Background Image Location</key>
 			<string></string>
+			<key>Badge Color</key>
+			<dict>
+				<key>Alpha Component</key>
+				<real>0.5</real>
+				<key>Blue Component</key>
+				<real>0.0</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
+				<key>Green Component</key>
+				<real>0.0</real>
+				<key>Red Component</key>
+				<real>1</real>
+			</dict>
 			<key>Blend</key>
 			<real>0.30000001192092896</real>
 			<key>Blink Allowed</key>
@@ -9621,9 +9634,9 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.49019607843137253</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.36862745098039218</real>
 				<key>Red Component</key>
 				<real>1</real>
 			</dict>
@@ -9638,11 +9651,24 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.83921569585800171</real>
+				<real>0.3333333432674408</real>
 				<key>Green Component</key>
-				<real>0.83921569585800171</real>
+				<real>0.3333333432674408</real>
 				<key>Red Component</key>
-				<real>0.83921569585800171</real>
+				<real>1</real>
+			</dict>
+			<key>Cursor Guide Color</key>
+			<dict>
+				<key>Alpha Component</key>
+				<real>0.25</real>
+				<key>Blue Component</key>
+				<real>1</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
+				<key>Green Component</key>
+				<real>0.91000000000000003</real>
+				<key>Red Component</key>
+				<real>0.65000000000000002</real>
 			</dict>
 			<key>Cursor Text Color</key>
 			<dict>
@@ -9672,11 +9698,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.80000001192092896</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.86274510622024536</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.86274510622024536</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -9687,7 +9713,7 @@
 			<key>Idle Code</key>
 			<integer>0</integer>
 			<key>Initial Text</key>
-			<string></string>
+			<string>tmux</string>
 			<key>Jobs to Ignore</key>
 			<array>
 				<string>rlogin</string>
@@ -9999,6 +10025,19 @@
 					<string>[1;5F</string>
 				</dict>
 			</dict>
+			<key>Link Color</key>
+			<dict>
+				<key>Alpha Component</key>
+				<real>1</real>
+				<key>Blue Component</key>
+				<real>0.67800000000000005</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
+				<key>Green Component</key>
+				<real>0.27000000000000002</real>
+				<key>Red Component</key>
+				<real>0.023</real>
+			</dict>
 			<key>Log Directory</key>
 			<string></string>
 			<key>Minimum Contrast</key>
@@ -10032,20 +10071,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.0</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.35686275362968445</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.35686275362968445</real>
+				<real>0.83529412746429443</real>
 				<key>Red Component</key>
-				<real>0.35686275362968445</real>
+				<real>0.70980393886566162</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -10926,7 +10965,7 @@
 	<key>NoSyncInstallationId</key>
 	<string>0372D384-E672-44C2-8172-B5EDDF23F1D7</string>
 	<key>NoSyncLastTipTime</key>
-	<real>489764029.73049003</real>
+	<real>489850451.68488997</real>
 	<key>NoSyncPermissionToShowTip</key>
 	<true/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
@@ -10942,6 +10981,7 @@
 		<string>0001</string>
 		<string>0002</string>
 		<string>0003</string>
+		<string>0004</string>
 	</array>
 	<key>OnlyWhenMoreTabs</key>
 	<false/>
@@ -11013,7 +11053,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2016-07-09T13:34:07Z</date>
+	<date>2016-07-10T13:34:13Z</date>
 	<key>SUSkippedVersion</key>
 	<string>3.0.4</string>
 	<key>SavePasteHistory</key>
