--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,8 +68,10 @@ set -g pane-active-border-bg black
 #set inactive/active window styles
 # http://stackoverflow.com/questions/25532773/change-background-color-of-active-or-inactive-pane-in-tmux
 
+# 選択時に色を変えたい場合
+# themeに合わせて柔軟にできないのでコメントアウト
 # 暗い背景用
-set -g window-active-style 'fg=colour250,bg=#000033'
+# set -g window-active-style 'fg=colour250,bg=#000033'
 # 明るい背景用
 # set -g window-active-style 'fg=colour0,bg=#ffffff'
 
