--- a/.tmux.conf
+++ b/.tmux.conf
@@ -222,8 +222,8 @@ bind -n C-y run 'tmux copy-mode\;' send-keys z y Enter\; display "1 line copied.
 set-window-option -g mode-keys vi
 # http://superuser.com/questions/397076/tmux-exits-with-exited-on-mac-os-x
 ## クリップボード共有を有効にする
-# set-option -g default-command "reattach-to-user-namespace -l zsh"
-set-option -g default-command "reattach-to-user-namespace -l fish"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+# set-option -g default-command "reattach-to-user-namespace -l fish"
 ## コピーモードの操作をvi風に設定する
 # bind-key -t vi-copy v begin-selection
 # bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
