--- a/.tmux.conf
+++ b/.tmux.conf
@@ -198,9 +198,9 @@ set-option -g mouse on
 # bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
 # UTF8 Support
-setw -g utf8 on
+# setw -g utf8 on
 ## ステータスバーのUTF-8サポートを有効にする
-set -g status-utf8 on
+# set -g status-utf8 on
 ## リフレッシュの間隔を設定する(デフォルト 15秒)
 set -g status-interval 30
 ## ウィンドウリストの位置を中心寄せにする
