--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
+.DS_Store
+.emacs.d/elpa
+.emacs.d/history
+.emacs.d/server
 .frameposize
 .mc-lists.el
-auto-save-list
 .vimwinpos
-vimfiles/.vim/bundle/
-.emacs.d/elpa
-.emacs.d/server
-texput.log
-.emacs.d/history
-.DS_Store
+auto-save-list
 npm-debug.log
+texput.log
+vimfiles/.vim/bundle/
+vimfiles/dein/bundle/
