--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -9427,11 +9427,13 @@
 	<key>NSWindow Frame Preferences</key>
 	<string>356 321 606 456 0 0 1280 777 </string>
 	<key>NSWindow Frame SUStatusFrame</key>
-	<string>376 624 384 129 0 0 1280 777 </string>
+	<string>84 648 400 129 0 0 1280 777 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
-	<string>1610 232 620 392 1280 -224 1280 1001 </string>
+	<string>330 301 620 392 0 0 1280 777 </string>
+	<key>NSWindow Frame SharedPreferences</key>
+	<string>236 303 796 474 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>6 50 610 727 0 0 1280 777 </string>
+	<string>2 58 610 713 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>79 64 625 714 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
@@ -9450,65 +9452,65 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.30196079611778259</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.30196079611778259</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.30196079611778259</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.31372550129890442</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.31372550129890442</real>
 				<key>Red Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.43921568989753723</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.62352943420410156</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.74901962280273438</real>
 				<key>Red Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.76470589637756348</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.62352941176470589</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.81176470588235294</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.8784313725490196</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.9529411792755127</real>
 				<key>Green Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.74901962280273438</real>
 				<key>Red Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.58039218187332153</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.82745099067687988</real>
 				<key>Green Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.57647061347961426</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.92549020051956177</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.89019608497619629</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.87843137979507446</real>
 				<key>Red Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.57647061347961426</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
@@ -9522,74 +9524,74 @@
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.54117649793624878</real>
 				<key>Green Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.70588237047195435</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.37647059559822083</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.68627450980392157</real>
 				<key>Green Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.87450980392156863</real>
 				<key>Red Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.94117647058823528</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.43921568989753723</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.37647059559822083</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.31372550129890442</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.76470589637756348</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.54901963472366333</real>
 				<key>Red Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.86274510622024536</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.82745099067687988</real>
 				<key>Green Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.81568628549575806</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.54901963472366333</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.80000001192092896</real>
 				<key>Green Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.86274510622024536</real>
 				<key>Red Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.86274510622024536</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.50196081399917603</real>
 				<key>Green Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.56470590829849243</real>
 				<key>Red Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.43921568989753723</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.63921570777893066</real>
 				<key>Green Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.63921570777893066</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.86274510622024536</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9598,11 +9600,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.24705882370471954</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.24705882370471954</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.24705882370471954</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9634,11 +9636,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.80000001192092896</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.86274510622024536</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.86274510622024536</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9651,11 +9653,11 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.35294118523597717</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.38823530077934265</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.45098039507865906</real>
 			</dict>
 			<key>Cursor Guide Color</key>
 			<dict>
@@ -9673,11 +9675,11 @@
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.0</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>0</integer>
@@ -9698,11 +9700,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.80000001192092896</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.86274510622024536</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.86274510622024536</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -10071,20 +10073,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.47843137383460999</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.84705883264541626</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.7607843279838562</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.18431372940540314</real>
 				<key>Green Component</key>
-				<real>0.8353000283241272</real>
+				<real>0.19607843458652496</real>
 				<key>Red Component</key>
-				<real>0.70980000495910645</real>
+				<real>0.12941177189350128</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -10965,7 +10967,7 @@
 	<key>NoSyncInstallationId</key>
 	<string>0372D384-E672-44C2-8172-B5EDDF23F1D7</string>
 	<key>NoSyncLastTipTime</key>
-	<real>495779669.66513902</real>
+	<real>498886344.88365698</real>
 	<key>NoSyncPermissionToShowTip</key>
 	<true/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
@@ -10995,6 +10997,7 @@
 		<string>0015</string>
 		<string>0016</string>
 		<string>0017</string>
+		<string>0018</string>
 	</array>
 	<key>OnlyWhenMoreTabs</key>
 	<false/>
@@ -11066,9 +11069,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2016-09-17T04:34:31Z</date>
-	<key>SUSkippedVersion</key>
-	<string>3.0.9</string>
+	<date>2016-10-23T03:32:23Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
@@ -11123,6 +11124,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.0.0</string>
+	<string>3.0.10</string>
 </dict>
 </plist>
