--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -9393,7 +9393,7 @@
 	<key>MaxVertically</key>
 	<false/>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/Desktop/repository/iTerm2-Color-Schemes/schemes</string>
+	<string>~/Desktop/repository/SettingFiles</string>
 	<key>NSQuotedKeystrokeBinding</key>
 	<string></string>
 	<key>NSRepeatCountBinding</key>
@@ -9425,19 +9425,13 @@
 		<integer>1</integer>
 	</dict>
 	<key>NSWindow Frame Preferences</key>
-	<string>356 321 606 456 0 0 1280 777 </string>
+	<string>389 408 924 485 0 0 1920 1057 </string>
 	<key>NSWindow Frame SUStatusFrame</key>
-	<string>84 648 400 129 0 0 1280 777 </string>
-	<key>NSWindow Frame SUUpdateAlert</key>
-	<string>330 301 620 392 0 0 1280 777 </string>
+	<string>699 722 384 129 0 0 1920 1057 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>236 303 796 474 0 0 1280 777 </string>
+	<string>697 294 796 473 0 0 1920 1057 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>2 58 610 713 0 0 1280 777 </string>
-	<key>NSWindow Frame iTerm Window 1</key>
-	<string>79 64 625 714 0 0 1280 778 </string>
-	<key>NSWindow Frame iTerm Window 2</key>
-	<string>173 64 625 714 0 0 1280 778 </string>
+	<string>861 319 610 727 0 0 1920 1057 </string>
 	<key>NeverWarnAboutShortLivedSessions_6DE05245-ABC6-4133-86ED-9837935D9C3A</key>
 	<true/>
 	<key>New Bookmarks</key>
@@ -9452,146 +9446,146 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.30196079611778259</real>
+				<real>0.48771023750305176</real>
 				<key>Green Component</key>
-				<real>0.30196079611778259</real>
+				<real>0.48781105875968933</real>
 				<key>Red Component</key>
-				<real>0.30196079611778259</real>
+				<real>0.48775118589401245</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.31372550129890442</real>
+				<real>0.29618328809738159</real>
 				<key>Green Component</key>
-				<real>0.31372550129890442</real>
+				<real>0.027414536103606224</real>
 				<key>Red Component</key>
-				<real>0.43921568989753723</real>
+				<real>0.95434224605560303</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.62352943420410156</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.74901962280273438</real>
+				<real>0.83000284433364868</real>
 				<key>Red Component</key>
-				<real>0.76470589637756348</real>
+				<real>0.53356200456619263</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.62352941176470589</real>
+				<real>0.30797004699707031</real>
 				<key>Green Component</key>
-				<real>0.81176470588235294</real>
+				<real>0.84070998430252075</real>
 				<key>Red Component</key>
-				<real>0.8784313725490196</real>
+				<real>0.88004410266876221</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.9529411792755127</real>
+				<real>0.91900157928466797</real>
 				<key>Green Component</key>
-				<real>0.74901962280273438</real>
+				<real>0.74850761890411377</real>
 				<key>Red Component</key>
-				<real>0.58039218187332153</real>
+				<real>0.3060213029384613</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.82745099067687988</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.57647061347961426</real>
+				<real>0.41711190342903137</real>
 				<key>Red Component</key>
-				<real>0.92549020051956177</real>
+				<real>0.94003516435623169</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.89019608497619629</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.87843137979507446</real>
+				<real>0.38724252581596375</real>
 				<key>Red Component</key>
-				<real>0.57647061347961426</real>
+				<real>0.57401758432388306</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.93353170156478882</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.93353170156478882</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.93353170156478882</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.54117649793624878</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.70588237047195435</real>
+				<real>0.83000284433364868</real>
 				<key>Red Component</key>
-				<real>0.37647059559822083</real>
+				<real>0.53356200456619263</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.68627450980392157</real>
+				<real>0.30797004699707031</real>
 				<key>Green Component</key>
-				<real>0.87450980392156863</real>
+				<real>0.84070998430252075</real>
 				<key>Red Component</key>
-				<real>0.94117647058823528</real>
+				<real>0.88004410266876221</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.43921568989753723</real>
+				<real>0.91900157928466797</real>
 				<key>Green Component</key>
-				<real>0.37647059559822083</real>
+				<real>0.74850761890411377</real>
 				<key>Red Component</key>
-				<real>0.31372550129890442</real>
+				<real>0.3060213029384613</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.76470589637756348</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.54901963472366333</real>
+				<real>0.41711190342903137</real>
 				<key>Red Component</key>
-				<real>0.86274510622024536</real>
+				<real>0.94003516435623169</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.82745099067687988</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.81568628549575806</real>
+				<real>0.38724252581596375</real>
 				<key>Red Component</key>
-				<real>0.54901963472366333</real>
+				<real>0.57401758432388306</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80000001192092896</real>
+				<real>0.93353170156478882</real>
 				<key>Green Component</key>
-				<real>0.86274510622024536</real>
+				<real>0.93353170156478882</real>
 				<key>Red Component</key>
-				<real>0.86274510622024536</real>
+				<real>0.93353170156478882</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.50196081399917603</real>
+				<real>0.48771023750305176</real>
 				<key>Green Component</key>
-				<real>0.56470590829849243</real>
+				<real>0.48781105875968933</real>
 				<key>Red Component</key>
-				<real>0.43921568989753723</real>
+				<real>0.48775118589401245</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.63921570777893066</real>
+				<real>0.29618328809738159</real>
 				<key>Green Component</key>
-				<real>0.63921570777893066</real>
+				<real>0.027414536103606224</real>
 				<key>Red Component</key>
-				<real>0.86274510622024536</real>
+				<real>0.95434224605560303</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9600,11 +9594,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.24705882370471954</real>
+				<real>0.098682582378387451</real>
 				<key>Green Component</key>
-				<real>0.24705882370471954</real>
+				<real>0.11838251352310181</real>
 				<key>Red Component</key>
-				<real>0.24705882370471954</real>
+				<real>0.11495672911405563</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9636,11 +9630,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80000001192092896</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.86274510622024536</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.86274510622024536</real>
+				<real>1</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9653,11 +9647,11 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.35294118523597717</real>
+				<real>0.37647059559822083</real>
 				<key>Green Component</key>
-				<real>0.38823530077934265</real>
+				<real>0.64705884456634521</real>
 				<key>Red Component</key>
-				<real>0.45098039507865906</real>
+				<real>1</real>
 			</dict>
 			<key>Cursor Guide Color</key>
 			<dict>
@@ -9675,11 +9669,11 @@
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>1</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>0</integer>
@@ -9700,11 +9694,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80000001192092896</real>
+				<real>0.93353170156478882</real>
 				<key>Green Component</key>
-				<real>0.86274510622024536</real>
+				<real>0.93353170156478882</real>
 				<key>Red Component</key>
-				<real>0.86274510622024536</real>
+				<real>0.93353170156478882</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -10073,20 +10067,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.47843137383460999</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.84705883264541626</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.7607843279838562</real>
+				<real>0.0</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.18431372940540314</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.19607843458652496</real>
+				<real>0.8353000283241272</real>
 				<key>Red Component</key>
-				<real>0.12941177189350128</real>
+				<real>0.70980000495910645</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -10962,43 +10956,22 @@
 			<string>~/</string>
 		</dict>
 	</array>
+	<key>NoSyncDisablePromotions</key>
+	<true/>
 	<key>NoSyncHaveShownPromoWithId_4</key>
 	<true/>
+	<key>NoSyncHaveWarnedAboutPasteConfirmationChange</key>
+	<true/>
 	<key>NoSyncInstallationId</key>
-	<string>0372D384-E672-44C2-8172-B5EDDF23F1D7</string>
-	<key>NoSyncLastTipTime</key>
-	<real>498886344.88365698</real>
-	<key>NoSyncPermissionToShowTip</key>
+	<string>4698A8E2-C06D-4440-8880-BF769158EE9E</string>
+	<key>NoSyncNeverRemindPrefsChangesLost</key>
 	<true/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
-	<real>486838576.60981202</real>
+	<real>499233694.42887998</real>
 	<key>NoSyncTimeOfLastPromo</key>
-	<real>477765924.22227901</real>
+	<real>477658143.160788</real>
 	<key>NoSyncTimeOfLastPromoDownload</key>
-	<real>486837911.761222</real>
-	<key>NoSyncTipsToNotShow</key>
-	<array>
-		<string>000</string>
-		<string>0000</string>
-		<string>0001</string>
-		<string>0002</string>
-		<string>0003</string>
-		<string>0004</string>
-		<string>0005</string>
-		<string>0006</string>
-		<string>0007</string>
-		<string>0008</string>
-		<string>0009</string>
-		<string>0010</string>
-		<string>0011</string>
-		<string>0012</string>
-		<string>0013</string>
-		<string>0014</string>
-		<string>0015</string>
-		<string>0016</string>
-		<string>0017</string>
-		<string>0018</string>
-	</array>
+	<real>478141272.19875997</real>
 	<key>OnlyWhenMoreTabs</key>
 	<false/>
 	<key>OpenArrangementAtStartup</key>
@@ -11047,7 +11020,7 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>~/Desktop/repository/SettingFiles/mac/</string>
+	<string>/Users/a13596/Desktop/repository/SettingFiles/mac</string>
 	<key>PromptOnClose</key>
 	<true/>
 	<key>PromptOnQuit</key>
@@ -11065,11 +11038,11 @@
 	<key>SUFeedAlternateAppNameKey</key>
 	<string>iTerm</string>
 	<key>SUFeedURL</key>
-	<string>https://iterm2.com/appcasts/testing.xml?shard=50</string>
+	<string>https://iterm2.com/appcasts/testing.xml?shard=61</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2016-10-23T03:32:23Z</date>
+	<date>2016-10-28T03:32:59Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
@@ -11124,6 +11097,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.0.10</string>
+	<string>3.0.11</string>
 </dict>
 </plist>
