--- a/gitfiles/.gitconfig
+++ b/gitfiles/.gitconfig
@@ -170,3 +170,5 @@ stage = <Ctrl-p> :?^@@
 	log = diff-highlight | less
 	show = diff-highlight | less
 	diff = diff-highlight | less
+[init]
+	templatedir = ~/.git_template
